--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>CarsLoc</title>
 </head>
 <body>
-
-    <h1>Salut!</h1>
     
+    <nav>
+        <img class="logo" src="img/logo.png" alt="">
+        <ul class="titles">
+            <li><a href="">Accueil</a></li>
+            <li><a href="">Nos voitures</a></li>
+            <li><a href="">Réserver</a></li>    
+        </ul>
+        
+
+        <div class="hamburger hamburger--collapse">
+            <div class="hamburger-box">
+              <div class="hamburger-inner"></div>
+            </div>
+          </div>
+    </nav>
+    <script src="main.js"></script>
+
 </body>
 </html>
